# macos-photos-de-dupe-and-selective-delete

./: .gitignore
.agents/: mcp_config.json
.agents/rules/: project_rules.md
python/ml/: .gitignore  db.py  main.py  models.py  pyproject.toml  scanner.py  start_server.sh
swift/: photos-app-hang-investigation.md
swift/PhotoDedup/PhotoDedup/: AssetHasher.swift  Backend.swift  ClusterDetailView.swift  ClusterListView.swift  Clusterer.swift  Constants.swift  DeletionQueue.swift  ImageClassifier.swift  LocalBackend.swift  Models.swift  PHash.swift  PhotoDedup.entitlements  PhotoDedupApp.swift  PhotoLibraryBridge.swift  PhotoStore.swift  RemoteBackend.swift  ServerManager.swift  Typography.swift
swift/PhotoDedup/PhotoDedup.xcodeproj/: project.pbxproj
