[project]
name = "ml"
version = "0.1.0"
description = "Photo deduplication backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "osxphotos>=0.68",
    "imagehash>=4.3",
    "pillow>=11.0",
    "aiofiles>=24.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
